<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.design.widget.TabLayout-->
        <!--android:id="@+id/tablayout"-->
        <!--android:layout_width="match_parent"-->
        <!--app:tabBackground="@color/colorPrimaryDark"-->
        <!--app:tabTextColor="@android:color/white"-->
        <!--app:tabSelectedTextColor="#04b4ae"-->
        <!--app:tabIndicatorColor="@color/colorAccent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</android.support.design.widget.TabLayout>-->

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#929292"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_index"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="1dp"
                android:scaleType="centerInside"
                android:layout_weight="1"
                android:src="@mipmap/tab_ic_home_normal"
                android:background="#00000000"/>
            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/index"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_find"
                android:paddingTop="1dp"
                android:scaleType="centerInside"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/tab_ic_nearby_normal"
                android:background="#00000000"/>
            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/find"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_info"
                android:paddingTop="1dp"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/tab_ic_featured_normal"
                android:background="#00000000"/>
            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/info"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_setting"
                android:paddingTop="1dp"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/tab_ic_mine_normal"
                android:background="#00000000"/>
            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/se"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
